Resolves: tdf#111760 cancel file dialog on terminate

Change-Id: I5c061b47959baba138c6c23aaae365f28e9cf167